--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<script src="jquery-1.8.3.min.js"></script>
+		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 		
-		<script type="text/javascript" src="angular.min.js"></script>
-		<script src="gridify.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
+		<script src="src/gridify.js"></script>
 		<script src="main.js"></script>
 
 		<link rel="stylesheet" href="style.css">
