--- a/index.html
+++ b/index.html
@@ -1,1 +1,123 @@
-Ciao
+<!doctype html>
+<html ng-app="app">
+
+	<head>
+		<title></title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+		
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
+		<script src="src/gridify.js"></script>
+		<script src="example/main.js"></script>
+
+		<style>
+
+			body {
+
+				padding: 0;
+				margin: 0;
+
+			}
+
+			#buttons-wrapper {
+				width: 100%;
+				height: auto;
+				position: fixed;
+				top: 0;
+				z-index: 9;
+				background-color: rgba(250,250,250, 0.98);
+				border-bottom: 1px dotted #ccc;
+			}
+
+			#list-wrapper {
+				width: 80%;
+				background-color: black;
+				margin: 0 auto;
+			}
+
+			ul {
+				position: relative;
+				/*width: 90%;*/
+				height: auto;
+				margin: 0 auto;
+				padding: 0;
+				margin-top: 100px;
+			}
+
+			li {
+				width: 200px;
+				height: auto;
+				min-height: 300px;
+				margin: 20px 10px 20px 10px;
+				position: absolute;
+				background-color: #0091FF;
+				list-style: none;
+				-moz-transition: all .6s ease-out;
+				-webkit-transition: all .6s ease-out;
+				transition: all .6s ease-out;
+			}
+
+			button {
+				background-color: transparent;
+			  	border: 2px solid rgb(114, 122, 204);
+			  	color: rgb(114, 122, 204);
+			  	font-size: 11px;
+			  	text-transform: uppercase;
+			  	padding: 16px 30px;
+			  	cursor: pointer;
+			  	margin: 18px;
+			  	border-radius: 2px;
+			  	-moz-transition: all .2s ease-out;
+				-webkit-transition: all .2s ease-out;
+				transition: all .2s ease-out;
+				outline: none;
+			}
+
+			button:hover {
+				background-color: rgb(114, 122, 204);
+				color: white;
+				cursor: pointer;
+			}
+
+			button:active {
+				color: white;
+			}
+
+
+			.ciao {
+				-webkit-animation: simpleFadeOut 1s linear;
+			}
+
+			.noTransition {
+				-webkit-transition: none !important;
+			}
+
+			@keyframes simpleFadeOut {
+			    from {opacity: 0;}
+			    to {opacity: 1;}
+			}
+
+		</style>
+
+	</head>
+	<body ng-controller="prova">
+		<div id="buttons-wrapper" style="text-align: right">
+			<button ng-click="addItem()" class="add">add new</button>
+			<button ng-click="removeItem()">remove one</button>
+
+		</div>
+		<!-- <div id="lolo" style="width: 60%; overflow: hidden; height: auto; background-color: red"> -->
+		<div id="list-wrapper">
+			<ul set-columns gridify="{newItemClass : 'ciao', containerId : 'list-wrapper'}">
+				<li id="{{person._id}}" gridify-item="person" ng-repeat="person in (gridifiedList = lista)" ng-click="removeItem($index)">
+				<!-- <li gridify-item ng-repeat="person in lista track by $index" ng-click="removeAll()"> -->
+				{{$index}} - {{($index + 1) % colsNum == 0}}<br/>	
+				{{person.content}}
+				</li>
+			</ul>
+		</div>
+		<!-- </div> -->
+	</body>
+</html>
